2010-11-04 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-send-and-exit): New.
	(tinydebian-bts-mail-ctrl-bug-unsubscribe): Add parameter SEND
	which obeys user's prefix arg.
	(tinydebian-bts-mail-ctrl-bug-subscribe): Add parameter SEND
	which obeys user's prefix arg.

2010-11-04 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-bug-subscribe): Add
	return value.
	(tinydebian-bts-mail-ctrl-bug-subscribe): Add return value.

2010-10-31 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-:menu-lisp-library): Fix typo
	in docstring.

	* tiny/tinydebian.el (tinydebian-mail-header-subject-set): New.
	(tinydebian-bts-mail-type-ita): Retrieve information about
	bug package and message subject. Write composed Subject and
	control message content more intelligently.
	(tinydebian-mail-header-set): Add `save-excursion'.

2010-10-22 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-bug-unsubscribe):
	Correct subject text in email by adding (un) to (subscribe).
	(tinydebian-bug-ask-bts-and-number): if PROJECT is "ask", query
	user.
	(tinydebian-bts-mail-ctrl-close): Add support for multiple BTSs,
	e.g. Closing bug report in Emacs BTS.
	(tinydebian-bts-type-debbugs-p): devel New.
	(tinydebian-bts-mail-ask-bug-number): add parameter DEFAULT.
	Update docstring.
	(tinydebian-bts-email-compose): devel Add BTS gnu.
	(tinydebian-bug-ask-bts-and-number): Call
	`tinydebian-bug-bts-type-determine' to guess current BTS.

2010-10-21 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-usertag):
	Set default to user-mail-address in interactive prompt.
	(tinydebian-bts-mail-ctrl-usertag): Position cursor after
	'+' sign.

2010-10-20 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-usertag):
	Improve docstring.

2010-10-19 Tue  Jari Aalto  <jari.aalto@cante.net>
